Removed specific comment pages. Blog Posts now have comments and the main page only displays Blog Posts, not comments

--- a/index.yaml
+++ b/index.yaml
@@ -11,7 +11,20 @@ indexes:
 # your application using appcfg.py.
 
 - kind: Post
+  properties:
+  - name: isRoot
+  - name: created
+    direction: desc
+
+- kind: Post
   ancestor: yes
   properties:
+  - name: created
+    direction: desc
+
+- kind: Post
+  ancestor: yes
+  properties:
+  - name: isRoot
   - name: created
     direction: desc
